--- a/code with mosh/3 - Mastering React/4 - Composing Components/project-postal-service/package.json
+++ b/code with mosh/3 - Mastering React/4 - Composing Components/project-postal-service/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
